syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.osc.bikas.proto";

import "google/protobuf/timestamp.proto";

// Defines the Session message
message Session {
  // Session ID (primary key)
  string session_id = 1;

  // User ID associated with the session
  string user_id = 2;

  // Name of the device used in the session
  string device_name = 3;

  // Timestamp for the login time
  google.protobuf.Timestamp login_time = 4;

  // Timestamp for the logout time
  google.protobuf.Timestamp logout_time = 5;
}